MODIFY CS6460: modify html files

--- a/CS6460/_layouts/default.html
+++ b/CS6460/_layouts/default.html
@@ -71,12 +71,12 @@
                     function setBG_Black() {
                         document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                         document.body.style.color = "yellow";
-                        gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                        gtech.src = "https://robert-bobkoskie/CS6460/images/gtech_HCS.png";
                     }
                     function setBG_White() {
                         document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                         document.body.style.color = "black";
-                        gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                        gtech.src = "https://robert-bobkoskie/CS6460/images/gtech.png";
                     }
                 </script>
 
@@ -100,7 +100,7 @@
                     <ul>
                         <p>Comments.</p>
                         <a href="https://youtu.be/x54uVowlfMU" target="_blank">
-                            <img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png"
+                            <img class="center fit" src="https://robert-bobkoskie/CS6460/images/comments.png"
                             title="Click on Image to Enter Comments"
                             alt="https://youtu.be/x54uVowlfMU" style="border:0;">
                         </a>
@@ -111,7 +111,7 @@
                             <textarea name="body"></textarea>
                             <input type="submit" value="Send" />
                         </form>
-                        <li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
+                        <li><a href="https://github.com/robert-bobkoskie">github.com/robert-bobkoskie</a></li>
                     </ul>
                 </footer>
         </body>
