MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -71,12 +71,12 @@
                     function setBG_Black() {
                         document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                         document.body.style.color = "yellow";
-                        gtech.src = "https://robert-bobkoskie/cs6460/images/gtech_HCS.png";
+                        gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech_HCS.png";
                     }
                     function setBG_White() {
                         document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                         document.body.style.color = "black";
-                        gtech.src = "https://robert-bobkoskie/cs6460/images/gtech.png";
+                        gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
                     }
                 </script>
 
@@ -100,7 +100,7 @@
                     <ul>
                         <p>Comments.</p>
                         <a href="https://youtu.be/x54uVowlfMU" target="_blank">
-                            <img class="center fit" src="https://robert-bobkoskie/cs6460/images/comments.png"
+                            <img class="center fit" src="https://robert-bobkoskie.github.io/cs6460/images/comments.png"
                             title="Click on Image to Enter Comments"
                             alt="https://youtu.be/x54uVowlfMU" style="border:0;">
                         </a>
