MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-                <img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
+		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/cs6460/css/main.css">
 		<br><br>
 	</head>
 
@@ -53,8 +53,8 @@
 
         <body>
 		<nav><ul>
-	            <li><a href="/" target="_self">Home</a></li>	        
-	            <li><a href="/about" target="_self">Project Propositum</a></li>	        	
+	            <li><a href="/cs6460/" target="_self">Home</a></li>	        
+	            <li><a href="/cs6460/about" target="_self">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
                 <div><p>
@@ -89,17 +89,17 @@
 
                 <h1>Math Plots</h1>
 		<nav><ul>
-                    <li><a href="/line" target="_self">LINES</a></li>
-        	    <li><a href="/circle" target="_self">CIRCLES</a></li>
-        	    <li><a href="/parabola" target="_self">PARABOLAS</a></li>
-		    <li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
+				<li><a href="/cs6460/line" target="_self">LINES</a></li>
+        	    <li><a href="/cs6460/circle" target="_self">CIRCLES</a></li>
+        	    <li><a href="/cs6460/parabola" target="_self">PARABOLAS</a></li>
+		    <li><a href="/cs6460/hyperbola" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
                 <footer>
                     <ul>
                         <p>Comments.</p>
-                        <a href="https://youtu.be/x54uVowlfMU" target="_blank">
+                        <a href="https://youtube/x54uVowlfMU" target="_blank">
                             <img class="center fit" src="https://robert-bobkoskie.github.io/cs6460/images/comments.png"
                             title="Click on Image to Enter Comments"
                             alt="https://youtu.be/x54uVowlfMU" style="border:0;">
@@ -107,9 +107,9 @@
                         <br><br><br>
 
                         <p>If there are any additional feedback, enter in textbox and click "Send".</p>
-                   	<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
-                            <textarea name="body"></textarea>
-                            <input type="submit" value="Send" />
+						<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+							<textarea name="body"></textarea>
+							<input type="submit" value="Send" />
                         </form>
                         <li><a href="https://github.com/robert-bobkoskie">github.com/robert-bobkoskie</a></li>
                     </ul>
