MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
+		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="\cs6460\images\gtech.png">
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/cs6460/css/main.css">
@@ -53,7 +53,7 @@
 
         <body>
 		<nav><ul>
-	            <li><a href="/cs6460/" target="_self">Home</a></li>	        
+	            <li><a href="/" target="_self">Home</a></li>	        
 	            <li><a href="/cs6460/about" target="_self">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
