MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -89,9 +89,9 @@
 
                 <h1>Math Plots</h1>
 		<nav><ul>
-                    <li><a href="/line" target="_self">LINES</a></li>
-					<li><a href="/circle" target="_self">CIRCLES</a></li>
-					<li><a href="/parabola" target="_self">PARABOLAS</a></li>
+                    <li><a href="line" target="_self">LINES</a></li>
+					<li><a href="circle" target="_self">CIRCLES</a></li>
+					<li><a href="parabola" target="_self">PARABOLAS</a></li>
 		    <li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
