MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -54,7 +54,7 @@
         <body>
 		<nav><ul>
 	            <li><a href="/" target="_self">Home</a></li>	        
-	            <li><a href="/about" target="_self">Project Propositum</a></li>	        	
+	            <li><a href="cs6460/about" target="_self">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
                 <div><p>
@@ -89,10 +89,10 @@
 
                 <h1>Math Plots</h1>
 		<nav><ul>
-                    <li><a href="line" target="_self">LINES</a></li>
-					<li><a href="circle" target="_self">CIRCLES</a></li>
-					<li><a href="parabola" target="_self">PARABOLAS</a></li>
-		    <li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
+                    <li><a href="cs6460/line" target="_self">LINES</a></li>
+					<li><a href="cs6460/circle" target="_self">CIRCLES</a></li>
+					<li><a href="cs6460/parabola" target="_self">PARABOLAS</a></li>
+		    <li><a href="cs6460/hyperbola" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
