--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -53,7 +53,7 @@
 
         <body>
 		<nav><ul>
-	            <li><a href="/" target="_self">Home</a></li>	        
+	            <li><a href="cs6460/" target="_self">Home</a></li>	        
 	            <li><a href="cs6460/about" target="_self">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
