MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
                 <img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
-		<title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+				<title>{{ page.title }}</title>
+				<!-- link to main stylesheet -->
+				<link rel="stylesheet" type="text/css" href="/cs6460/css/main.css">
 		<br><br>
 	</head>
 
