MODIFY CS6460: modify html files

--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
                 <img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
-				<title>{{ page.title }}</title>
-				<!-- link to main stylesheet -->
-				<link rel="stylesheet" type="text/css" href="css/main.css">
+		<title>{{ page.title }}</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<br><br>
 	</head>
 
@@ -54,7 +54,7 @@
         <body>
 		<nav><ul>
 	            <li><a href="/" target="_self">Home</a></li>	        
-	            <li><a href="about" target="_self">Project Propositum</a></li>	        	
+	            <li><a href="/about" target="_self">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
                 <div><p>
@@ -89,10 +89,10 @@
 
                 <h1>Math Plots</h1>
 		<nav><ul>
-                    <li><a href="line" target="_self">LINES</a></li>
-					<li><a href="circle" target="_self">CIRCLES</a></li>
-					<li><a href="parabola" target="_self">PARABOLAS</a></li>
-		    <li><a href="hyperbola" target="_self">HYPERBOLAS</a></li>
+                    <li><a href="/line" target="_self">LINES</a></li>
+        	    <li><a href="/circle" target="_self">CIRCLES</a></li>
+        	    <li><a href="/parabola" target="_self">PARABOLAS</a></li>
+		    <li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
@@ -107,11 +107,11 @@
                         <br><br><br>
 
                         <p>If there are any additional feedback, enter in textbox and click "Send".</p>
-						<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+                   	<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
                             <textarea name="body"></textarea>
                             <input type="submit" value="Send" />
                         </form>
-                        <li><a href="https://github.com/robert-bobkoskie">github.com/rbobkoskie3</a></li>
+                        <li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
                     </ul>
                 </footer>
         </body>
