MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,10 +90,10 @@
 
 		<h1>Math Plots</h1>
 		<nav><ul>
-			<li><a href="https://robert-bobkoskie.github.io/cs6460/line" target="_self">LINES</a></li>
-			<li><a href="circle" target="_self">CIRCLES</a></li>
-			<li><a href="/parabola" target="_self">PARABOLAS</a></li>
-			<li><a href="/hyperbola" target="_self">HYPERBOLAS</a></li>
+			<li><a href="/cs6460/line" target="_self">LINES</a></li>
+			<li><a href="/cs6460/circle" target="_self">CIRCLES</a></li>
+			<li><a href="/cs6460/parabola" target="_self">PARABOLAS</a></li>
+			<li><a href="/cs6460/hyperbola" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
@@ -101,7 +101,7 @@
 			<ul>
 				<p>Comments.</p>
 				<a href="https://youtu.be/x54uVowlfMU" target="_blank">
-				<img class="center fit" src="https://robert-bobkoskie.github.io/cs6460/images/comments.png"
+				<img class="center fit" src="/cs6460/images/comments.png"
 				title="Click on Image to Enter Comments"
 				alt="https://youtu.be/x54uVowlfMU" style="border:0;">
 			</a>
