MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
+		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<br><br>
 	</head>
 
