--- a/cs6460/_layouts/default.html
+++ b/cs6460/_layouts/default.html
@@ -80,5 +80,40 @@
 				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
 			}
 		</script>
+
+		<div class="container">
+
+			{{ content }}
+
+		</div><!-- /.container -->
+		<br>
+
+		<h1>Math Plots</h1>
+		<nav><ul>
+			<li><a href="/cs6460/line" target="_self">LINES</a></li>
+			<li><a href="/cs6460/circle" target="_self">CIRCLES</a></li>
+			<li><a href="/cs6460/parabola" target="_self">PARABOLAS</a></li>
+			<li><a href="/cs6460/hyperbola" target="_self">HYPERBOLAS</a></li>
+		</ul></nav>
+		<br><br><br>
+
+		<footer>
+			<ul>
+				<p>Comments.</p>
+				<a href="https://youtu.be/x54uVowlfMU" target="_blank">
+				<img class="center fit" src="/cs6460/images/comments.png"
+				title="Click on Image to Enter Comments"
+				alt="https://youtu.be/x54uVowlfMU" style="border:0;">
+			</a>
+			<br><br><br>
+
+			<p>If there are any additional feedback, enter in textbox and click "Send".</p>
+			<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+				<textarea name="body"></textarea>
+				<input type="submit" value="Send" />
+			</form>
+			<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
