--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,41 @@
 			.btn-group button:hover {
 				background-color: #3e8e41;
 			}
+			
+			
+			
+			###################
+			.btn-group webs {
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
+				font-weight: bold;
+				font-size: 18px;
+				padding: 10px 24px; /* Some padding */
+				cursor: pointer; /* Pointer/hand icon */
+				float: left; /* Float the buttons side by side */
+			}
+
+			/* Clear floats (clearfix hack) */
+			.btn-group:after {
+				content: "";
+				clear: both;
+				display: block;
+			}
+
+			.btn-group button:not(:last-child) {
+				border-right: none; /* Prevent double borders */
+			}
+
+			/* Add a background color on hover */
+			.btn-group webs:hover {
+				background-color: #3e8e41;
+			}
+			#################
+			
+			
+			
+			
 
 			.fit {  /* set relative picture size */
 				max-width: 100%;
@@ -64,6 +99,11 @@
 		<div class="btn-group">
 			<button type="button" onclick="setBG_Black()">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()">STD  CONTRAST</button>
+		</div>
+		
+		<div class="btn-group">
+			<button type="webs" onclick="setBG_Black()">HIGH CONTRAST</button>
+			<button type="webs" onclick="setBG_White()">STD  CONTRAST</button>
 		</div>
 
 		<script>
