MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
 			
 			
 			###################
-			.btn-group webs {
+			.btn-group2 webs {
+				display: block;
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
 				color: white; /* White text */
@@ -56,7 +57,7 @@
 			}
 
 			/* Clear floats (clearfix hack) */
-			.btn-group:after {
+			.btn-group2:after {
 				content: "";
 				clear: both;
 				display: block;
@@ -67,7 +68,7 @@
 			}
 
 			/* Add a background color on hover */
-			.btn-group webs:hover {
+			.btn-group2 webs:hover {
 				background-color: #3e8e41;
 			}
 			#################
@@ -101,7 +102,7 @@
 			<button type="button" onclick="setBG_White()">STD  CONTRAST</button>
 		</div>
 		
-		<div class="btn-group">
+		<div class="btn-group2">
 			<button type="webs" onclick="setBG_Black()">HIGH CONTRAST</button>
 			<button type="webs" onclick="setBG_White()">STD  CONTRAST</button>
 		</div>
