MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
 				display: block;
 			}
 
-			.btn-group button:not(:last-child) {
+			.btn-group2 button:not(:last-child) {
 				border-right: none; /* Prevent double borders */
 			}
 
@@ -103,8 +103,8 @@
 		</div>
 		
 		<div class="btn-group2">
-			<button type="webs" onclick="setBG_Black()">HIGH CONTRAST</button>
-			<button type="webs" onclick="setBG_White()">STD  CONTRAST</button>
+			<button type="webs" onclick="setBG_Black()">H CONTRAST</button>
+			<button type="webs" onclick="setBG_White()">S  CONTRAST</button>
 		</div>
 
 		<script>
