MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,14 +53,13 @@
 				font-size: 18px;
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
-				float: left; /* Float the buttons side by side */
 			}
 
 			/* Clear floats (clearfix hack) */
 			.btn-group2:after {
 				content: "";
 				clear: both;
-				display: block;
+				display: table;
 			}
 
 			.btn-group2 button:not(:last-child) {
