--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 			
 			
 			###################
-			.btn-group webs {
+			.btn-group2 webs {
 				display: block;
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
@@ -56,18 +56,18 @@
 			}
 
 			/* Clear floats (clearfix hack) */
-			.btn-group webs:after {
+			.btn-group2 webs:after {
 				content: "";
 				clear: both;
 				display: table;
 			}
 
-			.btn-group webs:not(:last-child) {
+			.btn-group2 webs:not(:last-child) {
 				border-right: none; /* Prevent double borders */
 			}
 
 			/* Add a background color on hover */
-			.btn-group webs:hover {
+			.btn-group2 webs:hover {
 				background-color: #3e8e41;
 			}
 			#################
@@ -101,9 +101,9 @@
 			<button type="button" onclick="setBG_White()">STD  CONTRAST</button>
 		</div>
 		
-		<div class="btn-group">
-			<button type="webs" onclick="setBG_Black()">Hg CONTRAST</button>
-			<button type="webs" onclick="setBG_White()">St  CONTRAST</button>
+		<div class="btn-group2">
+			<button type="webs" onclick="setBG_Black()">Hggg CONTRAST</button>
+			<button type="webs" onclick="setBG_White()">Sttt  CONTRAST</button>
 		</div>
 
 		<script>
