--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,42 +40,7 @@
 			.btn-group button:hover {
 				background-color: #3e8e41;
 			}
-			
-			
-			
-			###################
-			.btn-group2 webs {
-				display: block;
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
-				font-weight: bold;
-				font-size: 18px;
-				padding: 10px 24px; /* Some padding */
-				cursor: pointer; /* Pointer/hand icon */
-			}
-
-			/* Clear floats (clearfix hack) */
-			.btn-group2 webs:after {
-				content: "";
-				clear: both;
-				display: table;
-			}
-
-			.btn-group2 webs:not(:last-child) {
-				border-right: none; /* Prevent double borders */
-			}
-
-			/* Add a background color on hover */
-			.btn-group2 webs:hover {
-				background-color: #3e8e41;
-			}
-			#################
-			
-			
-			
-			
-
+						
 			.fit {  /* set relative picture size */
 				max-width: 100%;
 				max-height: 100%;
@@ -101,9 +66,13 @@
 			<button type="button" onclick="setBG_White()">STD  CONTRAST</button>
 		</div>
 		
-		<div class="btn-group2">
-			<button type="webs" onclick="setBG_Black()">Hggg CONTRAST</button>
-			<button type="webs" onclick="setBG_White()">Sttt  CONTRAST</button>
+		<div class="btn-group">
+			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+			COURSES <span class="caret"></span></button>
+			<ul class="dropdown-menu" role="menu">
+				<li><a href="#">CS6460</a></li>
+				<li><a href="#">CS6470</a></li>
+			</ul>
 		</div>
 
 		<script>
