--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,6 @@
 			}
 
 			
-
-			.btn-group button:not(:last-child) {
-				border-right: none; /* Prevent double borders */
-			}
-
-			/* Add a background color on hover */
-			.btn-group button:hover {
-				background-color: #3e8e41;
-			}
 						
 			.fit {  /* set relative picture size */
 				max-width: 100%;
@@ -64,8 +55,8 @@
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 				COURSES <span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">CS---6460</a></li>
-					<li><a href="#">CS---6470</a></li>
+					<li><a href="#">CSzz6460</a></li>
+					<li><a href="#">CSzz6470</a></li>
 				</ul>
 			</div>
 		</div>
