MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 				font-size: 18px;
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
-				
+				float: left; /* Float the buttons side by side */
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -65,12 +65,12 @@
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
-			<div class="btn-group">
+			<div class="dropdown">
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 				COURSES <span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">C6460</a></li>
-					<li><a href="#">CS6470</a></li>
+					<li><a href="#">CS---6460</a></li>
+					<li><a href="#">CS---6470</a></li>
 				</ul>
 			</div>
 		</div>
