--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,11 +67,15 @@
 			
 			<div class="dropdown">
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-				COURSES <span class="caret"></span></button>
-				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">CS---6460</a></li>
-					<li><a href="#">CS---6470</a></li>
-				</ul>
+				Dropdown button </button>
+				<div class="dropdown-menu">
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Link 1</a>
+					<a class="dropdown-item" href="#">Link 2</a>
+					<a class="dropdown-item" href="#">Link 3</a>
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Another link</a>
+				</div>
 			</div>
 		</div>
 		
