--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,21 +61,19 @@
 			Select High Contrast, or Standard (Std) Contrast for the webpage.
 		</div></p>
 		
-		
+		<div class="btn-group">
+			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
+			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
 			<div class="dropdown">
-				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-				Dropdown button </button>
-				<div class="dropdown-menu">
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<a class="dropdown-item" href="#">Link 1</a>
-					<a class="dropdown-item" href="#">Link 2</a>
-					<a class="dropdown-item" href="#">Link 3</a>
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<a class="dropdown-item" href="#">Another link</a>
-				</div>
+				<button type="button" class="dropdown-toggle" data-toggle="dropdown">
+				COURSES <span class="caret"></span></button>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="#">CS6460</a></li>
+					<li><a href="#">CS6470</a></li>
+				</ul>
 			</div>
-		
+		</div>
 		
 		<script>
 			var gtech =  document.getElementById("gtech");
