--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
 			<div class="dropdown">
-				<button type="button" class="dropdown-toggle" data-toggle="dropdown">
+				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 				COURSES <span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu">
 					<li><a href="#">CS6460</a></li>
@@ -74,6 +74,24 @@
 				</ul>
 			</div>
 		</div>
+		
+		<div class="container">
+			<h2>Dropdowns</h2>
+			<p>The .dropdown-header class is used to add headers inside the dropdown menu:</p>
+			<div class="dropdown">
+				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+				Dropdown button</button>
+				<div class="dropdown-menu">
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Link 1</a>
+					<a class="dropdown-item" href="#">Link 2</a>
+					<a class="dropdown-item" href="#">Link 3</a>
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Another link</a>
+				</div>
+			</div>
+		</div>
+
 		
 		<script>
 			var gtech =  document.getElementById("gtech");
