--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,26 @@
 			.btn-group button:hover {
 				background-color: #3e8e41;
 			}
-						
+			
+			.dropdown {
+				position: relative;
+				display: inline-block;
+			}
+
+			.dropdown-content {
+				display: none;
+				position: absolute;
+				background-color: #f9f9f9;
+				min-width: 160px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				padding: 12px 16px;
+				z-index: 1;
+			}
+
+			.dropdown:hover .dropdown-content {
+				display: block;
+			}
+			
 			.fit {  /* set relative picture size */
 				max-width: 100%;
 				max-height: 100%;
