MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
 			Select High Contrast, or Standard (Std) Contrast for the webpage.
 		</div></p>
 		
-		<div class="dropdown">
+		<div class="btn-group">
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
@@ -88,9 +88,18 @@
 				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 				COURSES <span class="caret"></span></button>
 				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">CS 6460</a></li>
-					<li><a href="#">CS 6470</a></li>
+					<li><a href="#">CS6460</a></li>
+					<li><a href="#">CS6470</a></li>
 				</ul>
+			</div>
+		</div>
+		
+		<div class="dropdown">
+			<button class="dropbtn">Dropdown</button>
+			<div class="dropdown-content">
+				<a href="#">Link 1</a>
+				<a href="#">Link 2</a>
+				<a href="#">Link 3</a>
 			</div>
 		</div>
 		
