MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,12 +85,12 @@
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
 			<div class="dropdown">
-				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-				COURSES <span class="caret"></span></button>
-				<ul class="dropdown-menu" role="menu">
-					<li><a href="#">CS6460</a></li>
-					<li><a href="#">CS6470</a></li>
-				</ul>
+				<<button class="dropbtn">Dropdown</button>
+				<div class="dropdown-content">
+					<a href="#">Link 1</a>
+					<a href="#">Link 2</a>
+					<a href="#">Link 3</a>
+				</div>
 			</div>
 		</div>
 		
