--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,9 +87,12 @@
 			<div class="dropdown">
 				<<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
-					<a href="#">Link 1</a>
-					<a href="#">Link 2</a>
-					<a href="#">Link 3</a>
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Link 1</a>
+					<a class="dropdown-item" href="#">Link 2</a>
+					<a class="dropdown-item" href="#">Link 3</a>
+					<h5 class="dropdown-header">Dropdown header</h5>
+					<a class="dropdown-item" href="#">Another link</a>
 				</div>
 			</div>
 		</div>
