--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,14 +85,14 @@
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
 			<div class="dropdown">
-				<<button class="dropbtn">Dropdown</button>
+				<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<a class="dropdown-item" href="#">Link 1</a>
-					<a class="dropdown-item" href="#">Link 2</a>
-					<a class="dropdown-item" href="#">Link 3</a>
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<a class="dropdown-item" href="#">Another link</a>
+					<h5 class="dropdown-header">Dropdown header</h5></li>
+					<li><a class="dropdown-item" href="#">Link 1</a></li>
+					<li><a class="dropdown-item" href="#">Link 2</a></li>
+					<li><a class="dropdown-item" href="#">Link 3</a></li>
+					<li><h5 class="dropdown-header">Dropdown header</h5></li>
+					<li><a class="dropdown-item" href="#">Another link</a></li>
 				</div>
 			</div>
 		</div>
