--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
-					<h5 class="dropdown-header">Dropdown header</h5>
+					<li><h5 class="dropdown-header">Dropdown header</h5></li>
 					<li><a class="dropdown-item" href="#">Link 1</a></li>
 					<li><a class="dropdown-item" href="#">Link 2</a></li>
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
