--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,12 +87,12 @@
 			<div class="dropdown">
 				<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<li><a class="dropdown-item" href="#">Link 1</a></li>
+					<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
+					<li><a class="dropdown-item" href="/cs6460">Link 1</a></li>
 					<li><a class="dropdown-item" href="#">Link 2</a></li>
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
 					<h5 class="dropdown-header">Dropdown header</h5>
-					<li><a class="dropdown-item" href="#">Another link</a></li>
+					<li><a class="dropdown-item" href="#">Machine Learning Research</a></li>
 				</div>
 			</div>
 		</div>
