MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
 		</ul></nav>
 	
 		<div><p>
-			Select High Contrast, or Standard (Std) Contrast for the webpage.
+			Select High Contrast, or Standard (STD) Contrast for the webpage.
 		</div></p>
 		
 		<div class="btn-group">
@@ -88,11 +88,11 @@
 				<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
-					<li><a class="dropdown-item" href="/cs6460">Link 1</a></li>
+					<li><a class="dropdown-item" href="cs6460">cs6460</a></li>
 					<li><a class="dropdown-item" href="#">Link 2</a></li>
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
-					<h5 class="dropdown-header">Dropdown header</h5>
-					<li><a class="dropdown-item" href="#">Machine Learning Research</a></li>
+					<h5 class="dropdown-header">Machine Learning Research</h5>
+					<li><a class="dropdown-item" href="cs7646/docs">Learning</a></li>
 				</div>
 			</div>
 		</div>
