MODIFY CS6460: modify html files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 				display: none;
 				position: absolute;
 				background-color: #f9f9f9;
-				min-width: 160px;
+				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 12px 16px;
 				z-index: 1;
@@ -88,11 +88,11 @@
 				<button class="dropbtn">Dropdown</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
-					<li><a class="dropdown-item" href="cs6460">cs6460</a></li>
+					<li><a class="dropdown-item" href="/cs6460">cs6460</a></li>
 					<li><a class="dropdown-item" href="#">Link 2</a></li>
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
 					<h5 class="dropdown-header">Machine Learning Research</h5>
-					<li><a class="dropdown-item" href="cs7646/docs">Learning</a></li>
+					<li><a class="dropdown-item" href="/cs7646/docs">Learning</a></li>
 				</div>
 			</div>
 		</div>
