--- a/cs7646/_layouts/default.html
+++ b/cs7646/_layouts/default.html
@@ -54,8 +54,7 @@
 
 	<body>
 		<nav><ul>
-			<li><a href="/" target="_self">Home</a></li>	        
-			<li><a href="/about" target="_self">Project Propositum</a></li>	        	
+			<li><a href="/" target="_self">Home</a></li>	                	
 		</ul></nav>
 	
 		<div><p>
@@ -88,12 +87,12 @@
 		</div><!-- /.container -->
 		<br>
 
-		<h1>Math Plots</h1>
+		<h1>ML Papers</h1>
 		<nav><ul>
-			<li><a href="/cs6460/line" target="_self">LINES</a></li>
-			<li><a href="/cs6460/circle" target="_self">CIRCLES</a></li>
-			<li><a href="/cs6460/parabola" target="_self">PARABOLAS</a></li>
-			<li><a href="/cs6460/hyperbola" target="_self">HYPERBOLAS</a></li>
+			<li><a href="/cs7646/docs/Demo_ML_SL_DT" target="_self">Presentation Decision Tree</a></li>
+			<li><a href="/cs7646/docs" target="_self">CIRCLES</a></li>
+			<li><a href="/cs7646/docs" target="_self">PARABOLAS</a></li>
+			<li><a href="/cs7646/docs" target="_self">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
