MODIFY ML DOCS PAGE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
 					<li><a class="dropdown-item" href="#">Link 2</a></li>
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
 					<h5 class="dropdown-header">Machine Learning Research</h5>
-					<li><a class="dropdown-item" href="/cs7646/docs">Learning</a></li>
+					<li><a class="dropdown-item" href="/cs7646">Machine Learning</a></li>
 				</div>
 			</div>
 		</div>
