MODIFY ML DOCS PAGE

--- a/cs7646/_layouts/default.html
+++ b/cs7646/_layouts/default.html
@@ -80,7 +80,12 @@
 			}
 		</script>
 
-		
+		<div class="container">
+
+			{{ content }}
+
+		</div><!-- /.container -->
+		<br>
 
 		<h1>ML Papers</h1>
 		<nav><ul>
