MODIFY ML DOCS PAGE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 			
 			<div class="dropdown">
-				<button class="dropbtn">Dropdown</button>
+				<button class="dropbtn">Prototypes and Research Papers</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
 					<li><a class="dropdown-item" href="/cs6460">cs6460</a></li>
@@ -93,6 +93,9 @@
 					<li><a class="dropdown-item" href="#">Link 3</a></li>
 					<h5 class="dropdown-header">Machine Learning Research</h5>
 					<li><a class="dropdown-item" href="/cs7646">Machine Learning</a></li>
+					<h5 class="dropdown-header">Computer Vision</h5>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7">CV Prototype-1</a></li>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA">CV Prototype-2</a></li>
 				</div>
 			</div>
 		</div>
