MODIFY ML DOCS PAGE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,8 +94,8 @@
 					<h5 class="dropdown-header">Machine Learning Research</h5>
 					<li><a class="dropdown-item" href="/cs7646">Machine Learning</a></li>
 					<h5 class="dropdown-header">Computer Vision</h5>
-					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7">CV Prototype-1</a></li>
-					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA">CV Prototype-2</a></li>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"target="_blank">CV Prototype-1</a></li>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"target="_blank">CV Prototype-2</a></li>
 				</div>
 			</div>
 		</div>
