--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,11 +89,12 @@
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
 					<li><a class="dropdown-item" href="/cs6460">cs6460</a></li>
-					<li><a class="dropdown-item" href="#">Link 2</a></li>
-					<li><a class="dropdown-item" href="#">Link 3</a></li>
-					<h5 class="dropdown-header">Machine Learning Research</h5>
-					<li><a class="dropdown-item" href="/cs7646">Machine Learning</a></li>
-					<h5 class="dropdown-header">Computer Vision</h5>
+					<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/">HCI Research</a></li>
+					<li><a class="dropdown-item" href="#">LINK</a></li>
+					<h5 class="dropdown-header">Research</h5>
+					<li><a class="dropdown-item" href="/cs7646">Machine Learning (ML)</a></li>
+					<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/">Human-Computer Interaction (HCI)</a></li>
+					<h5 class="dropdown-header">Computer Vision (CV)</h5>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"target="_blank">CV Prototype-2</a></li>
 				</div>
