MODIFY RESEARCH LINKS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,12 +87,12 @@
 			<div class="dropdown">
 				<button class="dropbtn">Prototypes and Research Papers</button>
 				<div class="dropdown-content">
-					<!––
+					<script> HIDING THIS CODE:
 							<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
 							<li><a class="dropdown-item" href="/cs6460">cs6460</a></li>
 							<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/"target="_blank">HCI Research</a></li>
 							<li><a class="dropdown-item" href="#">LINK</a></li>
-					––>
+					</script>
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646">Machine Learning (ML)</a></li>
 					<li><a class="dropdown-item" href="/cs6238">Secure Computer Systems (SCI)</a></li>
