MODIFY RESEARCH LINKS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646">Machine Learning (ML)</a></li>
 					<li><a class="dropdown-item" href="/cs6238">Secure Computer Systems (SCI)</a></li>
-					<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/"target="_blank">Human-Computer Interaction (HCI)</a></li>
+					<li><a class="dropdown-item" href="/cs6750">Human-Computer Interaction (HCI)</a></li>
 					<h5 class="dropdown-header">Computer Vision (CV)</h5>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"target="_blank">CV Prototype-2</a></li>
