--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,8 @@
 				# background-color: #f9f9f9;
 				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-				padding: 12px 16px;
+				# padding: 12px 16px;
+				padding: 0;
 				z-index: 1;
 			}
 
