--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 							<li><a class="dropdown-item" href="#">LINK</a></li>
 					</script>
 					<h5 class="dropdown-header">Research</h5>
-					<li><a class="dropdown-item" href="/cs7646">Machine Learning (ML) title="Machine Learning (ML)"</a></li>
+					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
 					<li><a class="dropdown-item" href="/cs6238">Secure Computer Systems (SCI)</a></li>
 					<li><a class="dropdown-item" href="/cs6750">Human-Computer Interaction (HCI)</a></li>
 					<h5 class="dropdown-header">Computer Vision (CV)</h5>
