--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,8 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    display: inline
+    display: inline;
+	color: yellow;
 }
 footer {
     border-top: 1px solid #d5d5d5;
